<resources>
    <string name="app_name">UKT_Geral</string>
    <string name="arahLoginActivity">Sudah punya akun? Login YUK</string>
    <string name="arahRegisterActivity">Belum punya akun? Register YUK</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="data_buku">Data Buku</string>
    <string name="tambah_buku">Tambah Buku</string>
    <string name="kembali">Kembali</string>
    <string name="informasi_buku">Informasi Buku</string>
</resources>