<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#F8F8FF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <!-- Username Input -->
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints="username"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="#9A9A9A"
        android:inputType="text"
        android:fontFamily="@font/sf_ui_display"
        android:padding="16dp"
        android:elevation="3dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="#9A9A9A"
        android:padding="16dp"
        android:fontFamily="@font/sf_ui_display"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:elevation="3dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        android:layout_marginTop="16dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="#9A9A9A"
        android:padding="16dp"
        android:fontFamily="@font/sf_ui_display"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:elevation="3dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_marginTop="16dp"/>

    <!-- Phone Input -->
    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColor="@color/black"
        android:textColorHint="#9A9A9A"
        android:padding="16dp"
        android:autofillHints="phone"
        android:inputType="phone"
        android:elevation="3dp"
        android:fontFamily="@font/sf_ui_display"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="16dp"/>

    <!-- Register Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/sf_ui_display"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText"
        android:padding="16dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button" />

    <!-- Arah ke login -->
    <TextView
        android:id="@+id/arahKeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arahLoginActivity"
        android:textColor="#0070FF"
        android:fontFamily="@font/sf_ui_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="17sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/registerButton"/>

    <!-- Logo Register -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="115dp"
        android:src="@drawable/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <!-- Title Register -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/sf_ui_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

</androidx.constraintlayout.widget.ConstraintLayout>