<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#F8F8FF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!-- Email Input -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="#9A9A9A"
        android:padding="16dp"
        android:fontFamily="@font/sf_ui_display"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:elevation="3dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/rounded_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop="50dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="#9A9A9A"
        android:padding="16dp"
        android:fontFamily="@font/sf_ui_display"
        android:layout_marginHorizontal="15dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:elevation="3dp"
        android:background="@drawable/rounded_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_marginTop="16dp"/>

    <!-- Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:padding="16dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/sf_ui_display"
        android:background="@drawable/rounded_button"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0090FF"/>

    <!-- Arah ke Register -->
    <TextView
        android:id="@+id/arahKeRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arahRegisterActivity"
        android:textColor="#0070FF"
        android:fontFamily="@font/sf_ui_display"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="17sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginButton"/>

    <!-- Title Register -->
    <TextView
        android:id="@id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/sf_ui_display"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

</androidx.constraintlayout.widget.ConstraintLayout>