<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#F8F8FF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:text="@string/data_buku"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:fontFamily="@font/sf_ui_display"
        android:background="#0080FF"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tambah_buku"
        android:textSize="17sp"
        android:paddingHorizontal="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/sf_ui_display"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kembali"
        android:textSize="17sp"
        android:textStyle="bold"
        android:fontFamily="@font/sf_ui_display"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kembali"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_book"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/ivServerError"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/error"
            android:layout_gravity="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ivLoading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/loading"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_gravity="top"
            android:background="@drawable/top_shadow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@drawable/bottom_shadow"
            android:layout_gravity="bottom" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvPaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="10dp"
        android:text="Page ? of ?"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sf_ui_display"
        android:paddingHorizontal="15dp"
        android:text="prev"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPaging"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/svHorizontal"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        app:layout_constraintStart_toEndOf="@id/previous"
        app:layout_constraintEnd_toStartOf="@id/next"
        android:layout_marginTop="36dp">

        <LinearLayout
            android:id="@+id/paginationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sf_ui_display"
        android:paddingHorizontal="15dp"
        android:text="next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPaging"
        app:layout_constraintVertical_bias="0.368" />

</androidx.constraintlayout.widget.ConstraintLayout>